[tool.poetry]
name = "restqlite"
version = "0.1.0"
description = ""
authors = ["utan <iw.utan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.1"
uvicorn = "^0.27.0.post1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
httpx = "^0.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
